# semi-auto-trading-assistant

./: .env.example  .gitignore  .keyhub.json  README.md  Start Trading Assistant.cmd  alembic.ini  pyproject.toml
configs/: default.toml  local.env.example
deploy/: README.md  backup.sh  configure-llm.sh  configure-opend.sh  nginx-tailscale.conf.example  run-opend.sh  trading-assistant-api.service  trading-assistant-backup.service  trading-assistant-backup.timer  trading-assistant-opend.service  trading-assistant-web.service  trading-assistant.env.example
docs/: architecture.md  broker-api-notes.md  frontend-openstock.md  investment-decision-policy.md  repository-maintenance.md
frontend/openstock/: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
migrations/: env.py
migrations/versions/: 20260713_0001_decision_desk.py  20260713_0002_opportunity_watchlist.py  20260713_0003_security_themes.py  20260713_0004_analysis_settings.py  20260713_0005_risk_profiles.py  20260715_0006_investment_policy_profiles.py  20260717_0007_analysis_reports.py
scripts/: start-trading-assistant.ps1  sync-opportunity-watchlist.ps1
src/trading_assistant/: __init__.py  analysis_schedule.py  api.py  audit.py  cli.py  config.py  db.py  decision_engine.py  domain.py  drafts.py  fx.py  llm.py  (+13 more)
tests/: test_analysis_coverage.py  test_analysis_schedule.py  test_api.py  test_decision_desk.py  test_llm_status.py  test_notifications.py  test_official_evidence.py  test_risk.py  test_risk_profiles.py  test_themes.py  test_vision.py  test_watchlist_sync.py
(+22 files in other folders)
